<resources>
    <string name="app_name">F23_3175_G4_Marketeer</string>
    <string name="txtViewNoUsers">No users found!</string>
    <!--Will update with database items in the future!-->
    <string-array name="items_name">
        <item>Very Happy</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Neutral</item>
    </string-array>

    <string-array name="items_price">
        <item>$50</item>
        <item>$75</item>
        <item>$100</item>
        <item>$150</item>
    </string-array>

    <string-array name="items_distance">
        <item>All Products</item>
        <item>Within 2km</item>
        <item>Within 5km</item>
        <item>Within 10km</item>
        <item>Within 20km</item>
    </string-array>

    <string name="txtAddProduct">Add a new product</string>
    <string name="txtAddAnImage">Add an image</string>
    <string name="txtNewImg">New Image</string>
    <string name="txtGalleryImg">Choose from Gallery</string>
    <string name="txtProductName">Product Name</string>
    <string name="txtPrice">Price (in CAD)</string>
    <string name="txtAddNewProduct">Add Product</string>
    <string name="txtImgViewNewProduct">Img to be added to create new product</string>
    <string name="logo">Logo</string>
    <string name="editTextPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="txtViewPlaceholder">username: admin\npassword: admin\n(remove this text view in future)</string>
    <string name="editTextUsername">Username</string>
    <string name="btnRegister">No account yet? Create one!</string>
    <string name="textViewRegister">Enter new account information</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="img">someImage</string>
    <string name="btnCamera">Take Picture</string>
    <string name="txtTitleMyProfile">My Profile</string>
    <string name="txtViewUsername">Username</string>
    <string name="txtPassword">Password:</string>
    <string name="txtUserPassword">No Password</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="txtPassword2">Password</string>
    <string name="editTxtUsername">Username*</string>
    <string name="txtSaveChanges">Save Changes</string>
    <string name="error">error</string>
    <string name="txtShowPassword">Show</string>
    <string name="txtHide">HIDE</string>
    <string name="txtShow">SHOW</string>
    <string name="txtAddress">Address</string>
    <string name="txtHomeNumber">Home Number</string>
    <string name="txtStreetName">Street*</string>
    <string name="txtCity">City*</string>
    <string name="txtProvince">Province/State</string>
    <string name="txtHomeNumberHint">Number*</string>
    <string name="txtStreetSample">Home street</string>
    <string name="txtCitySample">Home city</string>
    <string name="txtProvinceSample">Province*</string>
    <string name="txtPhoneNumber">Phone:</string>
    <string name="txtPhoneSample">Phone Number</string>
    <string name="txtEmpty"> </string>
    <string name="txtViewAddress_Profile">Address:</string>
    <string name="txtNone">None</string>
    <string name="textPhone">Phone Number*</string>
    <string name="txtNewPfp">New Profile Image</string>
    <string name="txtFromGallery">Pick from Gallery</string>
    <string name="txtEditYourProduct">Edit Your Product</string>
    <string name="txtStatus">Status</string>
    <string name="txtAvailable">Available</string>
    <string name="txtSold">Sold</string>
    <string name="txtEditProduct">Confirm Edit</string>
    <string name="txtEditProdImg">Image retrieved from firebase using file name</string>
    <string name="productImage">Product Image</string>
    <string name="menuMainActivity">Main</string>
    <string name="menuMyProfileActivity">My Profile</string>
    <string name="menuEditProductActivity">Manage Products</string>
    <string name="textNavTitle">Marketeer</string>
    <string name="navDrawOpen">Open Navigation Drawer</string>
    <string name="navDrawClose">Close Navigation Drawer</string>
    <string name="navLogoDesc">Logo</string>
    <string name="menuChatActivity">Messages</string>
    <string name="menuNewProductActivity">New Product</string>
    <string name="menuPreviousActivity">Back</string>
    <string name="menuLogout">Logout</string>
    <string name="textHomeWelcome">Welcome to Marketeer! \nPlease open the drawer and select your destination</string>
    <string name="txtNotAdded">Not added</string>
    <string name="editTxtNewPassword">New Password</string>
    <string name="txtCurrentPassword">Enter current password to confirm edit*</string>
    <string name="txtAsteriskField">(All the fields with * must be entered)</string>
    <string name="txtEmptyString" />
    <string name="txtNoProductFound">No Product Found</string>
    <string name="menuManageProductActivity">Manage Products</string>
    <string name="menuTransactionHistoryActivity">Transaction History</string>
    <string name="txtAlreadyHaveAccount">Already have an account? Login!</string>
    <string name="txtSelectProducts">Select Products</string>
</resources>